--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-spring.application.name=class
+spring.application.name=senai
+
 # Configurações do banco de dados PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/senai_bank
+spring.datasource.url=jdbc:postgresql://localhost:5432/api_senai_db
 spring.datasource.username=postgres
 spring.datasource.password=123456
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 # Configurações de JPA/Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
@@ -17,3 +19,10 @@ spring.datasource.initialization-mode=always
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO
 logging.level.org.hibernate.type=INFO
+
+# Configurações do Spring mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=apifullstacksenai@gmail.com
+spring.mail.password=Senh4da@pi
+spring.mail.properties.mail.smtp.auth=true
